# ara-libplatforms

./: .gitignore  deploy.py  meson.build  meson_options.txt
platform/: meson.build
platform/beaglev/: README.md  hss_config.yaml  meson.build  uboot.defconfig
platform/raspberry/: README.md  deploy.py  deploy.sh  meson.build
platform/stm32/: linkerscript.ld  meson.build
platform/stm32/Drivers/CMSIS/Device/ST/STM32F1xx/Include/: meson.build
platform/stm32/Drivers/CMSIS/Device/ST/STM32F1xx/Source/: meson.build
platform/stm32/Drivers/STM32F1xx_HAL_Driver/Inc/: meson.build
platform/stm32/Drivers/STM32F1xx_HAL_Driver/Inc/default_conf/: meson.build
platform/stm32/Drivers/STM32F1xx_HAL_Driver/Src/: meson.build
